<resources>
    <string name="app_name">BadgerBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="title_activity_login__page">Login_Page</string>
    <string name="title_activity_start__page">Start_Page</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="button_login">Login As Existing User</string>
    <string name="title_activity_account_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="self_reminder_header">Create Your Reminder</string>
    <string name="new_reminder_title">Title:</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="close_menu">Close Menu</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="timeframe">Time</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="edit_prompt">Edit Reminder Description</string>
    <string name="checkbox_blank">Do Not Set</string>
    <string name="set_location">Set Location</string>
    <string name="set_time">Set Time</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="search_cancel">Cancel Search</string>
    <string name="search_name">Buddy Name</string>
    <string name="search_add">Add</string>
    <string name="make_new_rem">New Reminder</string>
    <string name="logout">Log Out</string>
    <string name="buddy_search">Buddy Search</string>
    <string name="pending_button">Pending Reminders</string>
    <string name="reminders_button">All Reminders</string>
    <string name="my_buddies">My Buddies</string>
    <string name="google_map">Google Map</string>

    <!-- Strings related to MyBuddy page -->
    <string name="buddy_name">Buddy: Name of Buddy</string>
    <string name="buddy_delete">Delete Buddy</string>
    <string name="button_add">Add Buddy</string>
    <string name="button_reminder_page">Reminders Page</string>
    <string name="reminders_from_buddy">Reminders for You</string>
    <string name="ui_test">UI Test</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to Reminders Screen -->
    <string name="cancel_prompt">Are you sure you want to cancel?</string>
    <string name="no">No</string>
    <string name="rem_title">Title: </string>
    <string name="rem_expand">Expand </string>
    <string name="rem_time">Time: </string>
    <string name="rem_date">Date: </string>
    <string name="rem_location">See Location</string>
    <string name="rem_delete">Delete</string>
    <string name="rem_make">Add Reminder</string>
    <string name="title_activity_buddy_screen">BuddyScreen</string>
    <string name="yes">Yes</string>
    <string name="backButtonString">&lt;</string>
    <string name="forwardButtonString">&gt;</string>
    <string name="title_activity_list_view_item">list_view_item</string>
</resources>
