<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="capstone18_05.google.developers.httpsconsole.badgerbuddy.RemindersScreen">

    <ScrollView
        android:id="@+id/remindersview"
        android:layout_width="368dp"
        android:layout_height="397dp"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494">

        <LinearLayout
            android:id="@+id/reminders_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/myrem_000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/myrem_temp_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rem_title"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/myrem_temp_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rem_desc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/myrem_temp_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rem_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/myrem_temp_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rem_location"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/myrem_temp_remove_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/myrem_temp_remove_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rem_delete" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/allRem_ForwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text=">"
        app:layout_constraintBottom_toBottomOf="@+id/allRem_BackButton"
        app:layout_constraintEnd_toEndOf="@+id/remindersview"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toEndOf="@+id/allRem_BackButton"
        app:layout_constraintTop_toTopOf="@+id/allRem_BackButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/allRem_BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginStart="80dp"
        android:text="@string/backButtonString"
        app:layout_constraintBottom_toBottomOf="@+id/remindersview"
        app:layout_constraintStart_toStartOf="@+id/remindersview" />

    <LinearLayout
        android:id="@+id/allRem_nav_buttons"
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/allRem_add_reminders"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAdd"
            android:text="@string/new_reminder_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible" />

        <Button
            android:id="@+id/allRem_back_to_home"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onHome"
            android:text="@string/back_to_homepage"
            android:visibility="visible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
