<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="capstone18_05.google.developers.httpsconsole.badgerbuddy.Buddies_Screen"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        <!--
        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSearch"
            android:padding="@dimen/fab_margin"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_reminder_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onReminder"
            android:padding="@dimen/fab_margin"
            android:text="@string/button_reminder_page" />
        -->

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onHome"
            android:padding="@dimen/fab_margin"
            android:text="@string/back_to_homepage" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/buddies_view"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <TextView
                    android:id="@+id/buddy_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buddy_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/buddy_rem_00"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminders_from_buddy" />

                    <Button
                        android:id="@+id/buddy_delete_00"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buddy_delete" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
